--- a/application.yml
+++ b/application.yml
@@ -7,6 +7,7 @@ spring:
   profiles: dev     #开发环境
   application: 
     name: spring-cloud-learn-config-dev
+    sex: 男
 ---
 spring:
   profiles: rest   #测试环境
